--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "telegram-competition-bot"
 main = "main.py"
-compatibility_date = "2024-01-01"
+compatibility_date = "2025-01-01"
 compatibility_flags = ["python_workers"]
 
 [env.production.vars]
@@ -8,8 +8,8 @@ compatibility_flags = ["python_workers"]
 
 [[env.production.d1_databases]]
 binding = "DB"
-database_name = "competition-bot"
-database_id = "your-d1-database-id-here"
+database_name = "challengebot-database"
+database_id = "090fbfd2-4b22-49a8-ae8d-8b8b99417392
 
 [env.development]
 [env.development.vars]
@@ -17,5 +17,5 @@ database_id = "your-d1-database-id-here"
 
 [[env.development.d1_databases]]
 binding = "DB"
-database_name = "competition-bot-dev"
-database_id = "your-dev-d1-database-id-here"
+database_name = "challengebot-database"
+database_id = "090fbfd2-4b22-49a8-ae8d-8b8b99417392"
